--- a/styles/style.css
+++ b/styles/style.css
@@ -50,7 +50,7 @@ header {
 
 #hero .btn {
     background: #fff;
-    color: #0073e6;
+    color:  #8000ff;
     padding: 10px 20px;
     border-radius: 5px;
     text-decoration: none;
